--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,8 @@ services:
     App\Service\CartService:
         arguments:
             $session: '@session'
+    App\Twig\CartExtension:
+        tags: [twig.extension]        
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
