--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,10 @@ services:
             $session: '@session'
     App\Twig\CartExtension:
         tags: [twig.extension]        
+    App\Service\MailerService:
+        arguments:
+            $mailer: '@mailer'
+            $twig: '@twig'  
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
